--- a/CurioSDK.Sample/CurioIOSSDKSample/CurioIOSSDKSample/CurioIOSSDKSample-Info.plist
+++ b/CurioSDK.Sample/CurioIOSSDKSample/CurioIOSSDKSample/CurioIOSSDKSample-Info.plist
@@ -7,9 +7,9 @@
 		<key>ServerURL</key>
 		<string>http://curio.turkcell.com.tr/api/v2</string>
 		<key>ApiKey</key>
-		<string>XXXXX</string>
+		<string>f6cf2070550e11e491c75bc19a55ea2d</string>
 		<key>TrackingCode</key>
-		<string>XXXXX</string>
+		<string>5MJ1C5QY</string>
 		<key>SessionTimeout</key>
 		<integer>4</integer>
 		<key>PeriodicDispatchEnabled</key>
@@ -22,6 +22,12 @@
 		<true/>
 		<key>LogLevel</key>
 		<integer>3</integer>
+		<key>RegisterForNotifications</key>
+		<false/>
+		<key>NotificationDataPushURL</key>
+		<string></string>
+		<key>NotificationTypes</key>
+		<string>Sound,Badge,Alert</string>
 	</dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
