--- a/CurioSDK.Sample/CurioIOSSDKSample/CurioIOSSDKSample/CurioIOSSDKSample-Info.plist
+++ b/CurioSDK.Sample/CurioIOSSDKSample/CurioIOSSDKSample/CurioIOSSDKSample-Info.plist
@@ -7,9 +7,9 @@
 		<key>ServerURL</key>
 		<string>http://curio.turkcell.com.tr/api/v2</string>
 		<key>ApiKey</key>
-		<string>f6cf2070550e11e491c75bc19a55ea2d</string>
+		<string>XXXXX</string>
 		<key>TrackingCode</key>
-		<string>5MJ1C5QY</string>
+		<string>XXXXX</string>
 		<key>SessionTimeout</key>
 		<integer>4</integer>
 		<key>PeriodicDispatchEnabled</key>
