--- a/CurioSDK.Sample/CurioIOSSDKSample/CurioIOSSDKSample/CurioIOSSDKSample-Info.plist
+++ b/CurioSDK.Sample/CurioIOSSDKSample/CurioIOSSDKSample/CurioIOSSDKSample-Info.plist
@@ -2,33 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CurioSDK</key>
-	<dict>
-		<key>ServerURL</key>
-		<string>http://curio.turkcell.com.tr/api/v2</string>
-		<key>ApiKey</key>
-		<string>XXXXX</string>
-		<key>TrackingCode</key>
-		<string>XXXXX</string>
-		<key>SessionTimeout</key>
-		<integer>4</integer>
-		<key>PeriodicDispatchEnabled</key>
-		<false/>
-		<key>DispatchPeriod</key>
-		<integer>1</integer>
-		<key>MaxCachedActivityCount</key>
-		<integer>1000</integer>
-		<key>LoggingEnabled</key>
-		<true/>
-		<key>LogLevel</key>
-		<integer>3</integer>
-		<key>RegisterForNotifications</key>
-		<false/>
-		<key>NotificationDataPushURL</key>
-		<string></string>
-		<key>NotificationTypes</key>
-		<string>Sound,Badge,Alert</string>
-	</dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
@@ -36,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.turkcell.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.turkcell.curio.$(PRODUCT_NAME:rfc1034identifier)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -49,8 +22,38 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
+	<key>CurioSDK</key>
+	<dict>
+		<key>ApiKey</key>
+		<string>XXXXX</string>
+		<key>DispatchPeriod</key>
+		<integer>1</integer>
+		<key>LogLevel</key>
+		<integer>3</integer>
+		<key>LoggingEnabled</key>
+		<true/>
+		<key>MaxCachedActivityCount</key>
+		<integer>50</integer>
+		<key>NotificationTypes</key>
+		<string>Sound,Badge,Alert</string>
+		<key>PeriodicDispatchEnabled</key>
+		<false/>
+		<key>RegisterForNotifications</key>
+		<true/>
+		<key>ServerURL</key>
+		<string>https://curiotest.turkcell.com.tr/api/v2</string>
+		<key>SessionTimeout</key>
+		<integer>4</integer>
+		<key>TrackingCode</key>
+		<string>XXXXX</string>
+	</dict>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+		<string>remote-notification</string>
+	</array>
 	<key>UIMainStoryboardFile</key>
 	<string>MainStoryboard_iPhone</string>
 	<key>UIMainStoryboardFile~ipad</key>
