--- a/CurioSDK.Sample/CurioIOSSDKSample/CurioIOSSDKSample/CurioIOSSDKSample-Info.plist
+++ b/CurioSDK.Sample/CurioIOSSDKSample/CurioIOSSDKSample/CurioIOSSDKSample-Info.plist
@@ -24,32 +24,32 @@
 	<string>1.0</string>
 	<key>CurioSDK</key>
 	<dict>
+		<key>ServerURL</key>
+		<string>XXXXX</string>
 		<key>ApiKey</key>
-		<string>a1578e903eff11e4aacd5119157960aa</string>
+		<string>XXXXX</string>
+		<key>TrackingCode</key>
+		<string>XXXXX</string>
+		<key>SessionTimeout</key>
+		<integer>4</integer>
+		<key>PeriodicDispatchEnabled</key>
+		<false/>
 		<key>DispatchPeriod</key>
 		<integer>1</integer>
 		<key>FetchLocationEnabled</key>
-		<true/>
+		<false/>
+		<key>MaxValidLocationTimeInterval</key>
+		<integer>600</integer>
+		<key>RegisterForRemoteNotifications</key>
+		<false/>
+		<key>NotificationTypes</key>
+		<string>Sound,Badge,Alert</string>
+		<key>MaxCachedActivityCount</key>
+		<integer>500</integer>
 		<key>LogLevel</key>
 		<integer>3</integer>
 		<key>LoggingEnabled</key>
 		<true/>
-		<key>MaxCachedActivityCount</key>
-		<integer>50</integer>
-		<key>MaxValidLocationTimeInterval</key>
-		<integer>600</integer>
-		<key>NotificationTypes</key>
-		<string>Sound,Badge,Alert</string>
-		<key>PeriodicDispatchEnabled</key>
-		<false/>
-		<key>RegisterForNotifications</key>
-		<true/>
-		<key>ServerURL</key>
-		<string>https://curiotest.turkcell.com.tr/api/v2</string>
-		<key>SessionTimeout</key>
-		<integer>4</integer>
-		<key>TrackingCode</key>
-		<string>2OTP5B2R</string>
 	</dict>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
